Fixed compilation errors.